--- a/Details.html
+++ b/Details.html
@@ -6,9 +6,47 @@
     <title>Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
+    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
 </head>
 <body>
-    
+  <header class="container-fluid ">
+    <div>
+      <img src="Assets/amazing_brand.png" alt="logo" id="logo">
+    </div>  
+    <div class="navlink">
+      <nav class="navbar navbar-expand-lg justify-content-end ">
+        <div class="container-fluid">           
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active border border-black rounded"  href="Index.html">Home</a>
+              <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
+              <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+              <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+              <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
+              <a class="nav-link border border-black rounded" aria-current="page" href="#">Details</a>                
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>        
+  </header><div class="media d-flex justify-content-center p-3">
+         <img src="Assets/books.jpg" class="align-self-start mr-3 img-thumbnail img-fluid" alt="Books" width="600">
+         <div class="media-body flex-shrink-0">
+            <div class="flex-grow-1 ms-3">
+               <h3 class="mt-0">Title</h3>
+               <p>Event data...</p>
+               <p>Event data...</p>
+               <p>Event data...</p>
+               <p>Event data...</p>
+           </div>
+       </div>
+     </div>
+     <footer class="d-flex justify-content-start p-3">
+      <img src="Assets/facebook.png" alt="Facebook" class="fb">
+      <img src="Assets/instagram.png" alt="Instagram" class="ig">
+      <img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp">
+    </footer>    
+       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
