--- a/Pastevents.html
+++ b/Pastevents.html
@@ -6,9 +6,187 @@
     <title>Past Events</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
+    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
 </head>
 <body>
-    
+  <header class="container-fluid ">
+    <div>
+      <img src="Assets/amazing_brand.png" alt="logo" id="logo">
+    </div>  
+    <div class="navlink">
+      <nav class="navbar navbar-expand-lg justify-content-end ">
+        <div class="container-fluid">           
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active border border-black rounded"  href="Index.html">Home</a>
+              <a class="nav-link border border-black rounded" aria-current="page" href="#">Past Events</a>
+              <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+              <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+              <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
+              <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>        
+  </header>
+  <div>
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/Assets/optional_banner_2.jpg" class="d-block w-100" alt="banner2">
+          <div class="carousel-caption d-none d-md-block text-uppercase fs-1 fw-bold text-decoration-underline">
+            <h1 class="shadow-lg">Past Events</h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_1.jpg" class="d-block w-100" alt="banner1">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_3.jpg" class="d-block w-100" alt="banner3">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_4.jpg" class="d-block w-100" alt="banner4">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_5.jpg" class="d-block w-100" alt="banner5">
+          <div class="carousel-caption d-none d-md-block">             
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>    
+  </div>
+  <div>
+    <div class="container-fluid navhorizontal">
+      <div class="row">
+         <div class="d-flex col-sm-8 justify-content-start">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+              <label class="form-check-label" for="inlineCheckbox1">Category</label>
+            </div>
+            <div class="form-check form-check-inline">
+             <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+             <label class="form-check-label" for="inlineCheckbox2">Category</label>
+            </div>
+           <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">Category</label>
+           </div>
+          <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+              <label class="form-check-label" for="inlineCheckbox4">Category</label>
+          </div>
+         <div class="form-check form-check-inline">
+           <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+           <label class="form-check-label" for="inlineCheckbox5">Category</label>
+        </div>
+         </div>
+        <div class="d-flex col-sm-4 justify-content-end">
+         <nav class="navbar d-flex justify-content-end col-sm-12">
+             <div class="container-fluid">
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-secondary" type="submit">Search</button>
+                </form>
+             </div>
+          </nav>
+      </div>
+    </div>        
+   </div>   
+   <div>          
+    <div class="d-flex flex-wrap p-5">
+      <div class="card " style="width: 18rem;">
+        <img src="Assets/cinema.jpg" class="card-img-top" alt="cinema">
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description</p>
+          <p>Price</p>
+          <a href="Details.html" class="btn btn-outline-danger">Submit</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Assets/music_concert.jpg" class="card-img-top" alt="concert">
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description</p>
+          <p>Price</p>
+          <a href="Details.html" class="btn btn-outline-danger">Submit</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Assets/books.jpg" class="card-img-top" alt="books">
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description</p>
+          <p>Price</p>
+          <a href="Details.html" class="btn btn-outline-danger">Submit</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Assets/costume_party.jpg" class="card-img-top" alt="party">
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description</p>
+          <p>Price</p>
+          <a href="Details.html" class="btn btn-outline-danger">Submit</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Assets/food_fair.jpg" class="card-img-top" alt="foodfair">
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description</p>
+          <p>Price</p>
+          <a href="Details.html" class="btn btn-outline-danger">Submit</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Assets/marathon.jpg" class="card-img-top" alt="marathon">
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description</p>
+          <p>Price</p>
+          <a href="Details.html" class="btn btn-outline-danger">Submit</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="Assets/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
+        <div class="card-body">
+          <h5 class="card-title">Title</h5>
+          <p class="card-text">Description</p>
+          <p>Price</p>
+          <a href="Details.html" class="btn btn-outline-danger">Submit</a>
+        </div>
+      </div>
+      </div>
+  </div>
+  </div>   
+    <footer class="d-flex justify-content-start p-3">
+        <img src="Assets/facebook.png" alt="Facebook" class="fb">
+        <img src="Assets/instagram.png" alt="Instagram" class="ig">
+        <img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp">    
+    </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
