--- a/Stats.html
+++ b/Stats.html
@@ -6,9 +6,135 @@
     <title>Stats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="Style.css">
+    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
 </head>
 <body>
-    
+  <header class="container-fluid ">
+    <div>
+      <img src="Assets/amazing_brand.png" alt="logo" id="logo">
+    </div>  
+    <div class="navlink">
+      <nav class="navbar navbar-expand-lg justify-content-end ">
+        <div class="container-fluid">           
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active border border-black rounded"  href="Index.html">Home</a>
+              <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
+              <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+              <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+              <a class="nav-link border border-black rounded" aria-current="page"  href="#">Stats</a>
+              <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>        
+  </header>
+  <div>
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/Assets/optional_banner_2.jpg" class="d-block w-100" alt="banner2">
+          <div class="carousel-caption d-none d-md-block text-uppercase fs-1 fw-bold text-decoration-underline">
+            <h1 class="shadow-lg">Stats</h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_1.jpg" class="d-block w-100" alt="banner1">
+          <div class="carousel-caption d-none d-md-block">           
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_3.jpg" class="d-block w-100" alt="banner3">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_4.jpg" class="d-block w-100" alt="banner4">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="Assets/optional_banner_5.jpg" class="d-block w-100" alt="banner5">
+          <div class="carousel-caption d-none d-md-block">             
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>    
+  </div>
+    <div class="tablestadistics p-3">
+      <table>
+        <thead>          
+          <tr>
+            <th colspan="3">Event Stadistic</th>            
+          </tr>        
+        </thead>
+             <tr>
+              <td>Events with highest % of assistance</td>
+              <td>Events with lowest % of assistance</td>
+              <td>Events with larger capacity</td>
+             </tr>
+             <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+             </tr>
+       </table>
+       <table>
+        <thead>          
+          <tr>
+            <th colspan="3">Upcoming events statistics by category</th>            
+          </tr>        
+        </thead>
+             <tr>
+              <td>Categories</td>
+              <td>Revenues</td>
+              <td>Percentage of assistance</td>
+             </tr>
+             <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+             </tr>
+       </table>
+       <table>
+        <thead>          
+          <tr>
+            <th colspan="3">Past events stadistics by category</th>            
+          </tr>        
+        </thead>
+             <tr>
+              <td >Categories</td>
+              <td>Revenues</td>
+              <td>Percentage of assitance</td>
+             </tr>
+             <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+             </tr>
+       </table>      
+    </div>
+    <footer class="d-flex justify-content-start p-3">
+        <img src="Assets/facebook.png" alt="Facebook" class="fb">
+        <img src="Assets/instagram.png" alt="Instagram" class="ig">
+        <img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp">          
+    </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
