--- a/Index.html
+++ b/Index.html
@@ -183,9 +183,9 @@
     </div>
     </div>      
     <footer class="d-flex justify-content-start p-3">
-      <img src="Assets/facebook.png" alt="Facebook" class="fb">
-      <img src="Assets/instagram.png" alt="Instagram" class="ig">
-      <img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp">          
+      <a href="https://www.facebook.com" title="Facebook"><img src="Assets/facebook.png" alt="Facebook" class="fb"></a>
+      <a href="https://www.instagram.com" title="Instagram"><img src="Assets/instagram.png" alt="Instagram" class="ig"></a>
+      <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp"></a>                
      </footer>  
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
