--- a/Index.html
+++ b/Index.html
@@ -188,5 +188,6 @@
       <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp"></a>                
      </footer>  
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+     <script> src="./data.js"</script>
 </body>
 </html>
