--- a/Upcomingevents.html
+++ b/Upcomingevents.html
@@ -114,72 +114,7 @@
       </div>
     </div>        
    </div>   
-    <div>          
-      <div class="d-flex flex-wrap p-5">
-        <div class="card " style="width: 18rem;">
-          <img src="Assets/cinema.jpg" class="card-img-top" alt="cinema">
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">Description</p>
-            <p>Price</p>
-            <a href="Details.html" class="btn btn-outline-danger">Submit</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="Assets/music_concert.jpg" class="card-img-top" alt="concert">
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">Description</p>
-            <p>Price</p>
-            <a href="Details.html" class="btn btn-outline-danger">Submit</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="Assets/books.jpg" class="card-img-top" alt="books">
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">Description</p>
-            <p>Price</p>
-            <a href="Details.html" class="btn btn-outline-danger">Submit</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="Assets/costume_party.jpg" class="card-img-top" alt="party">
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">Description</p>
-            <p>Price</p>
-            <a href="Details.html" class="btn btn-outline-danger">Submit</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="Assets/food_fair.jpg" class="card-img-top" alt="foodfair">
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">Description</p>
-            <p>Price</p>
-            <a href="Details.html" class="btn btn-outline-danger">Submit</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="Assets/marathon.jpg" class="card-img-top" alt="marathon">
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">Description</p>
-            <p>Price</p>
-            <a href="Details.html" class="btn btn-outline-danger">Submit</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="Assets/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">Description</p>
-            <p>Price</p>
-            <a href="Details.html" class="btn btn-outline-danger">Submit</a>
-          </div>
-        </div>
-        </div>
+    <div id="cardscontainer" class="d-flex flex-wrap">      
     </div>
   </div>   
   <footer class="d-flex justify-content-start p-3">
@@ -188,5 +123,7 @@
     <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp"></a>                
    </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="./data.js"></script>
+    <script src="./upcomingevent.js"></script>
 </body>
 </html>
