--- a/Index.html
+++ b/Index.html
@@ -12,11 +12,31 @@
     <header class="container-fluid ">
       <div>
         <img src="Assets/amazing_brand.png" alt="logo" id="logo">
-      </div>  
+      </div> 
+      <div class="navbar_responsive">
+        <div class="collapse" id="navbarToggleExternalContent" >
+          <div class="p-4">
+            <div class="nabvaricono">
+            <a class="nav-link active border border-black rounded" aria-current="page" href="#">Home</a>
+            <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
+            <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+            <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+            <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
+            <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
+          </div>   
+          </div>
+        </div>
+        <nav class="navbar">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+        </nav> 
+      </div>       
       <div class="navlink">
         <nav class="navbar navbar-expand-lg justify-content-end ">
-          <div class="container-fluid">           
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="container-fluid">                      
               <div class="navbar-nav">
                 <a class="nav-link active border border-black rounded" aria-current="page" href="#">Home</a>
                 <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
@@ -24,11 +44,10 @@
                 <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
                 <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
                 <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
-              </div>
-            </div>
-          </div>
-        </nav>
-      </div>        
+              </div>             
+           </div>
+         </nav>         
+       </div>            
     </header>
     <div>
       <div id="carouselExampleCaptions" class="carousel slide">
