--- a/Details.html
+++ b/Details.html
@@ -14,52 +14,45 @@
       <img src="Assets/amazing_brand.png" alt="logo" id="logo">
     </div> 
     <div class="navbar_responsive">
-      <div class="collapse" id="navbarToggleExternalContent" >
+      <div class="collapse" id="navbarToggleExternalContent">
         <div class="p-4">
           <div class="nabvaricono">
-          <a class="nav-link active border border-black rounded" aria-current="page" href="#">Home</a>
-          <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
-          <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
-          <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
-          <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
-          <a class="nav-link border border-black rounded" href="Details.html">Details</a>                
-        </div>   
+            <a class="nav-link active border border-black rounded"  href="Index.html">Home</a>
+            <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
+            <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+            <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+            <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
+            <a class="nav-link border border-black rounded" href="#">Details</a>
+          </div>
         </div>
       </div>
       <nav class="navbar">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-      </nav> 
-    </div>    
+      </nav>
+    </div>
     <div class="navlink">
       <nav class="navbar navbar-expand-lg justify-content-end ">
-        <div class="container-fluid">           
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active border border-black rounded"  href="Index.html">Home</a>
-              <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
-              <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
-              <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
-              <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
-              <a class="nav-link border border-black rounded" aria-current="page" href="#">Details</a>                
-            </div>
+        <div class="container-fluid">
+          <div class="navbar-nav">
+            <a class="nav-link active border border-black rounded"  href="Index.html">Home</a>
+            <a class="nav-link border border-black rounded" href="Pastevents.html">Past Events</a>
+            <a class="nav-link border border-black rounded" href="Upcomingevents.html">Upcoming Events</a>
+            <a class="nav-link border border-black rounded" href="Contact.html">Contact</a>
+            <a class="nav-link border border-black rounded" href="Stats.html">Stats</a>
+            <a class="nav-link border border-black rounded" aria-current="page" href="#">Details</a>
           </div>
         </div>
       </nav>
-    </div>        
-  </header><div class="media d-flex justify-content-center p-3">
-         <img src="Assets/books.jpg" class="align-self-start mr-3 img-thumbnail img-fluid" alt="Books" width="600">
-         <div class="media-body flex-shrink-0">
-            <div class="flex-grow-1 ms-3">
-               <h3 class="mt-0">Title</h3>
-               <p>Event data...</p>
-               <p>Event data...</p>
-               <p>Event data...</p>
-               <p>Event data...</p>
-           </div>
+    </div>       
+  </header>
+  <div class="contenedordetail media d-flex justify-content-center p-3">
+        
        </div>
      </div>
      <footer class="d-flex justify-content-start p-3">
@@ -68,6 +61,7 @@
       <a href="https://www.whatsapp.com/" title="Whatsapp"><img src="Assets/whatsapp.png" alt="Whatsapp" class="wsp"></a>                
      </footer>       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-   
+    <script src="./data.js"></script>
+    <script src="./detail.js"></script>
 </body>
 </html>
