--- a/Upcomingevents.html
+++ b/Upcomingevents.html
@@ -99,42 +99,22 @@
     </div>    
   </div>
   <div>
-    <div class="container-fluid navhorizontal">
-      <div class="row">
-         <div class="d-flex col-sm-8 justify-content-start">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-              <label class="form-check-label" for="inlineCheckbox1">Category</label>
-            </div>
-            <div class="form-check form-check-inline">
-             <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-             <label class="form-check-label" for="inlineCheckbox2">Category</label>
-            </div>
-           <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-              <label class="form-check-label" for="inlineCheckbox3">Category</label>
-           </div>
-          <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-              <label class="form-check-label" for="inlineCheckbox4">Category</label>
-          </div>
-         <div class="form-check form-check-inline">
-           <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-           <label class="form-check-label" for="inlineCheckbox5">Category</label>
+    <div class="navhorizontal d-flex flex-wrap">
+      <div class="contenedorcategoria">
+        <div id="checkboxcat">
         </div>
-         </div>
-        <div class="d-flex col-sm-4 justify-content-end">
-         <nav class="navbar d-flex justify-content-end col-sm-12">
-             <div class="container-fluid">
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-secondary" type="submit">Search</button>
-                </form>
-             </div>
-          </nav>
       </div>
-    </div>        
-   </div>   
+      <div id="divsearch">
+          <nav class="navbar d-flex justify-content-end col-sm-12">
+              <div class="container-fluid">
+                 <form class="d-flex" role="search">
+                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                   <button class="btn btn-outline-secondary" type="submit">Search</button>
+                 </form>
+              </div>
+           </nav>
+      </div>
+    </div>  
     <div id="cardscontainer" class="d-flex flex-wrap">      
     </div>
   </div>   
