--- a/Pastevents.html
+++ b/Pastevents.html
@@ -107,7 +107,7 @@
   <div>
     <div class="navhorizontal d-flex flex-wrap">
       <div class="contenedorcategoria">
-        <div id="checkboxcat">
+        <div id="checkboxcat" class="ps-5">
         </div>
       </div>
       <div id="divsearch">
