--- a/Index.html
+++ b/Index.html
@@ -111,10 +111,10 @@
   <div>
     <div class="navhorizontal d-flex flex-wrap">
       <div class="contenedorcategoria">
-        <div id="checkboxcat">
+        <div id="checkboxcat" class="ps-5">
         </div>
       </div>
-      <div id="divsearch">
+      <div id="divsearch justify-content-end">
           <nav class="navbar d-flex justify-content-end col-sm-12">
               <div class="container-fluid">
                  <form class="d-flex" role="search">
@@ -138,7 +138,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-  <script src="./data.js"></script>
+  
   <script src="./main.js"></script>
 </body>
 
